--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <section>
             <div class="container">
                 <div class="row">
-                    <div class="card"></div>
-                    <div class="card"></div>
+                    <div class="card col-lg-1-2"></div>
+                    <div class="card col-lg-1-2"></div>
                 </div>
             </div>
         </section>
@@ -67,11 +67,19 @@
                 </div>
 
                 <!-- card -->
-
                 <div class="row">
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
+                    <div class="card">
+                        <!-- img-banner  -->
+                        <div class="card col-md-1-3 col-lg-1-4">
+                            <img class="img-reboot" src="img/testimonial1.jpg" alt="">
+                        </div>
+
+                        <!-- txt-banner  -->
+                        <div class="card col-md-2-3 col-lg-3-4">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, repellendus quidem! Quam doloremque hic perferendis cumque aliquam. Quod accusamus neque, aut, suscipit tempora ad sed harum quo, praesentium perferendis ratione!</p>
+                        </div>
+                    </div>
+                    
                 </div>
 
             </div>
@@ -86,13 +94,20 @@
                 </div>
 
                 <!-- card -->
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-            </div>
+                <div class="card col-md-1-2 col-lg-1-3">
+                    <div>
+                        <h5>01</h5>
+                        <div>High Quality</div>
+                        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis hic tempore ratione dolorum eaque debitis eveniet delectus dolore eos esse dignissimos voluptatum natus laboriosam porro reprehenderit, a perferendis enim? Libero?</div>
+                        <div><button></button></div>
+                    </div>
+                </div>
+                <div class="card col-md-1-2 col-lg-1-3"></div>
+                <div class="card col-md-1-2 col-lg-1-3"></div>
+                <div class="card col-md-1-2 col-lg-1-3"></div>
+                <div class="card col-md-1-2 col-lg-1-3"></div>
+                <div class="card col-md-1-2 col-lg-1-3"></div>
+            </div> 
         </section>
 
         <!-- About us  -->
@@ -100,12 +115,12 @@
             <div class="container">
                 <div class="row">
                     <!-- txt  -->
-                    <div>
+                    <div class="col-md-2-3 col-lg-3-4">
 
                     </div>
 
                     <!-- img+txt  -->
-                    <div>
+                    <div class="col-md-1-3 col-lg-1-4">
                         <div><img src="" alt=""></div>
                         
                     </div>
@@ -121,6 +136,9 @@
             </div>
             <!-- description +btn  -->
             <div>
+                <div>testo</div>
+                <button>Get started</button>
+                <div>testo</div>
 
             </div>
         </section>
