--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
 
@@ -45,21 +45,71 @@
         <section>
             <div class="container">
                 <div class="row">
-                    <div class="card col-md-2-3">
-                        <div class="row">
+                    <div class="card col-md-2-3 pd-1-2 row-lg ">
+                        <div class="row bg-primary-light">
                             <!-- testo  -->
-                            <div></div>
+                            <div class="col-lg-1-2">
+                                <h2>Get a demo application</h2>
+                                <div>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas eos corporis,
+                                        repellat nemo sit fugit, non dolor quis quasi quae assumenda distinctio incidunt
+                                        doloremque id soluta quaerat magni ab? Tempora?</p>
+                                </div>
+                                <div><button>App Store</button></div>
+                            </div>
                             <!-- img card -->
-                            <div>
-                                <img src="" alt="">
+                            <div class="col-lg-1-2">
+                                <img class="img-reboot" src="img/phone.png" alt="">
                             </div>
 
                         </div>
                     </div>
-                    <div class="card col-md-1-3"></div>
-                    <div class="card col-md-1-3"></div>
-                    <div class="card col-md-1-3"></div>
-                    <div class="card col-md-1-3"></div>
+                    <div class="card col-md-1-3 pd-1-2">
+                        <div class="bg-primary-light">
+                            <div><i class="fa-solid fa-file-code"></i></div>
+                            <div>Clean code</div>
+                            <div>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, eius illo dicta
+                                    totam eos voluptate ab maiores nobis laudantium est harum, doloribus nisi
+                                    reprehenderit optio exercitationem corporis assumenda, itaque inventore!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card col-md-1-3 pd-1-2">
+                        <div class="bg-primary-light">
+                            <div><i class="fa-solid fa-file-code"></i></div>
+                            <div>Clean code</div>
+                            <div>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, eius illo dicta
+                                    totam eos voluptate ab maiores nobis laudantium est harum, doloribus nisi
+                                    reprehenderit optio exercitationem corporis assumenda, itaque inventore!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card col-md-1-3 pd-1-2">
+                        <div class="bg-primary-light">
+                            <div><i class="fa-solid fa-file-code"></i></div>
+                            <div>Clean code</div>
+                            <div>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, eius illo dicta
+                                    totam eos voluptate ab maiores nobis laudantium est harum, doloribus nisi
+                                    reprehenderit optio exercitationem corporis assumenda, itaque inventore!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card col-md-1-3 pd-1-2">
+                        <div class="bg-primary-light">
+                            <div><i class="fa-solid fa-file-code"></i></div>
+                            <div>Clean code</div>
+                            <div>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, eius illo dicta
+                                    totam eos voluptate ab maiores nobis laudantium est harum, doloribus nisi
+                                    reprehenderit optio exercitationem corporis assumenda, itaque inventore!</p>
+                            </div>
+                        </div>
+                    </div>
+                   
+
                 </div>
             </div>
         </section>
