--- a/index.html
+++ b/index.html
@@ -108,18 +108,51 @@
                             </div>
                         </div>
                     </div>
-                   
+
 
                 </div>
             </div>
         </section>
 
         <!-- Strategic planning -->
-        <section>
-            <div class="container">
+        <section class="bg-secondary">
+            <div class="container ">
                 <div class="row">
-                    <div class="card col-lg-1-2"></div>
-                    <div class="card col-lg-1-2"></div>
+                    <div class="card col-lg-1-2">
+                        <!-- img  -->
+                        <div>
+                            <img class="img-reboot" src="img/planning1.png" alt="">
+                        </div>
+                        <div>
+                            <h2>Strategic Planning</h2>
+                            <div>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam perspiciatis iste
+                                    enim quia a laboriosam eveniet voluptatum quo cupiditate! Nobis blanditiis
+                                    exercitationem reiciendis esse quidem nostrum aliquam, quasi corporis nemo.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card col-lg-1-2 bg-white">
+                        <!-- img  -->
+                        <div>
+                            <img class="img-reboot" src="img/planning2.png" alt="">
+                        </div>
+                        <div>
+                            <h2>App Development</h2>
+                            <div>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam perspiciatis iste
+                                    enim quia a laboriosam eveniet voluptatum quo cupiditate! Nobis blanditiis
+                                    exercitationem reiciendis esse quidem nostrum aliquam, quasi corporis nemo.
+                                </p>
+                            </div>
+                            <div><i class="fa-solid fa-down-long"></i></div>
+                        </div>
+                    </div>
+
+                   
+
                 </div>
             </div>
         </section>
