--- a/index.html
+++ b/index.html
@@ -162,12 +162,16 @@
             <div class="container">
                 <!-- txt -->
                 <div>
+                    <h2>TESTIMONIAL</h2>
+                    <h2>We are committed expert partners</h2>
+                    <div><p>We place huge value on strong relationships and have seen the benefit they bring to
+                        our business. Customer feedback is vital in helping us to get it right.</p></div>
 
                 </div>
 
                 <!-- card -->
                 <div class="row">
-                    <div class="card">
+                    <div class="card bg-secondary row-md">
                         <!-- img-banner  -->
                         <div class="card col-md-1-3 col-lg-1-4">
                             <img class="img-reboot" src="img/testimonial1.jpg" alt="">
@@ -177,7 +181,41 @@
                         <div class="card col-md-2-3 col-lg-3-4">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, repellendus
                                 quidem! Quam doloremque hic perferendis cumque aliquam. Quod accusamus neque, aut,
-                                suscipit tempora ad sed harum quo, praesentium perferendis ratione!</p>
+                                suscipit tempora ad sed harum quo, praesentium perferendis ratione!
+                            </p>
+                            <div>NAT REYNOLDS</div>
+                        </div>
+                    </div>
+
+                    <div class="card bg-secondary row-md">
+                        <!-- img-banner  -->
+                        <div class="card col-md-1-3 col-lg-1-4">
+                            <img class="img-reboot" src="img/testimonial1.jpg" alt="">
+                        </div>
+
+                        <!-- txt-banner  -->
+                        <div class="card col-md-2-3 col-lg-3-4">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, repellendus
+                                quidem! Quam doloremque hic perferendis cumque aliquam. Quod accusamus neque, aut,
+                                suscipit tempora ad sed harum quo, praesentium perferendis ratione!
+                            </p>
+                            <div>NAT REYNOLDS</div>
+                        </div>
+                    </div>
+
+                    <div class="card bg-secondary row-md">
+                        <!-- img-banner  -->
+                        <div class="card col-md-1-3 col-lg-1-4">
+                            <img class="img-reboot" src="img/testimonial1.jpg" alt="">
+                        </div>
+
+                        <!-- txt-banner  -->
+                        <div class="card col-md-2-3 col-lg-3-4">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, repellendus
+                                quidem! Quam doloremque hic perferendis cumque aliquam. Quod accusamus neque, aut,
+                                suscipit tempora ad sed harum quo, praesentium perferendis ratione!
+                            </p>
+                            <div>NAT REYNOLDS</div>
                         </div>
                     </div>
 
