--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         </div>
                     </div>
 
-                   
+
 
                 </div>
             </div>
@@ -164,8 +164,10 @@
                 <div>
                     <h2>TESTIMONIAL</h2>
                     <h2>We are committed expert partners</h2>
-                    <div><p>We place huge value on strong relationships and have seen the benefit they bring to
-                        our business. Customer feedback is vital in helping us to get it right.</p></div>
+                    <div>
+                        <p>We place huge value on strong relationships and have seen the benefit they bring to
+                            our business. Customer feedback is vital in helping us to get it right.</p>
+                    </div>
 
                 </div>
 
@@ -225,29 +227,86 @@
         </section>
 
         <!-- Benefits of working with us -->
-        <section>
+        <section class="bg-secondary">
             <div class="container">
                 <!-- txt -->
                 <div>
+                    <h2>Benefits of working with us</h2>
 
                 </div>
 
                 <!-- card -->
-                <div class="card col-md-1-2 col-lg-1-3">
-                    <div>
-                        <h5>01</h5>
-                        <div>High Quality</div>
-                        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis hic tempore ratione
-                            dolorum eaque debitis eveniet delectus dolore eos esse dignissimos voluptatum natus
-                            laboriosam porro reprehenderit, a perferendis enim? Libero?</div>
-                        <div><button></button></div>
+                <div class="row">
+                    <div class="card col-md-1-2 col-lg-1-3 pd-1-2 ">
+                        <div class="bg-white">
+                            <h5>01</h5>
+                            <div>High Quality</div>
+                            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis hic tempore ratione
+                                dolorum eaque debitis eveniet delectus dolore eos esse dignissimos voluptatum natus
+                                laboriosam porro reprehenderit, a perferendis enim? Libero?</div>
+                            <div><button>more</button></div>
+                        </div>
                     </div>
+
+                    <div class="card col-md-1-2 col-lg-1-3 pd-1-2 ">
+                        <div class="bg-white">
+                            <h5>01</h5>
+                            <div>High Quality</div>
+                            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis hic tempore ratione
+                                dolorum eaque debitis eveniet delectus dolore eos esse dignissimos voluptatum natus
+                                laboriosam porro reprehenderit, a perferendis enim? Libero?</div>
+                            <div><button>more</button></div>
+                        </div>
+                    </div>
+
+                    <div class="card col-md-1-2 col-lg-1-3 pd-1-2 ">
+                        <div class="bg-white">
+                            <h5>01</h5>
+                            <div>High Quality</div>
+                            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis hic tempore ratione
+                                dolorum eaque debitis eveniet delectus dolore eos esse dignissimos voluptatum natus
+                                laboriosam porro reprehenderit, a perferendis enim? Libero?</div>
+                            <div><button>more</button></div>
+                        </div>
+                    </div>
+
+                    <div class="card col-md-1-2 col-lg-1-3 pd-1-2 ">
+                        <div class="bg-white">
+                            <h5>01</h5>
+                            <div>High Quality</div>
+                            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis hic tempore ratione
+                                dolorum eaque debitis eveniet delectus dolore eos esse dignissimos voluptatum natus
+                                laboriosam porro reprehenderit, a perferendis enim? Libero?</div>
+                            <div><button>more</button></div>
+                        </div>
+                    </div>
+
+                    <div class="card col-md-1-2 col-lg-1-3 pd-1-2 ">
+                        <div class="bg-white">
+                            <h5>01</h5>
+                            <div>High Quality</div>
+                            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis hic tempore ratione
+                                dolorum eaque debitis eveniet delectus dolore eos esse dignissimos voluptatum natus
+                                laboriosam porro reprehenderit, a perferendis enim? Libero?</div>
+                            <div><button>more</button></div>
+                        </div>
+                    </div>
+
+                    <div class="card col-md-1-2 col-lg-1-3 pd-1-2 ">
+                        <div class="bg-white">
+                            <h5>01</h5>
+                            <div>High Quality</div>
+                            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis hic tempore ratione
+                                dolorum eaque debitis eveniet delectus dolore eos esse dignissimos voluptatum natus
+                                laboriosam porro reprehenderit, a perferendis enim? Libero?</div>
+                            <div><button>more</button></div>
+                        </div>
+                    </div>
+
+
                 </div>
-                <div class="card col-md-1-2 col-lg-1-3"></div>
-                <div class="card col-md-1-2 col-lg-1-3"></div>
-                <div class="card col-md-1-2 col-lg-1-3"></div>
-                <div class="card col-md-1-2 col-lg-1-3"></div>
-                <div class="card col-md-1-2 col-lg-1-3"></div>
+
+
             </div>
         </section>
 
