--- a/index.html
+++ b/index.html
@@ -316,12 +316,29 @@
                 <div class="row">
                     <!-- txt  -->
                     <div class="col-md-2-3 col-lg-3-4">
+                        <div>About Us</div>
+                        <div>
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam perferendis odit reprehenderit excepturi placeat. Et recusandae odio ipsum odit! Minus quisquam id deleniti hic veritatis mollitia dolore dolores impedit consequatur.
+                            </p>
+                        </div>
 
                     </div>
 
                     <!-- img+txt  -->
                     <div class="col-md-1-3 col-lg-1-4">
-                        <div><img src="" alt=""></div>
+                        <div>
+                            <img class="img-reboot" src="img/about.jpg" alt="">
+                        </div>
+                        <div>
+                            <div>I help companies
+                                tincidunt tortor aliquam
+                                nulla facilisi cras
+                                fermentum odio.
+                            </div>
+                            <div><a href="#"><i class="fa-brands fa-linkedin"></i> Find me on linkedin</a></div>
+
+                        </div>
 
                     </div>
                 </div>
@@ -329,26 +346,38 @@
         </section>
 
         <!-- get started -->
-        <section>
+        <section class="bg-secondary">
             <!-- title  -->
             <div>
+                <div>
+                    Get Started
+                </div>
+                <div>
+                    Simple, Transparent Pricing
+                </div>
+                <div>
+                    It's Free
+                </div>
 
             </div>
             <!-- description +btn  -->
-            <div>
-                <div>testo</div>
+            <div class="col-md-1-2 col-lg-1-2">
+                <div>Weye still in beta and we will be for awhile. As we add more
+                    functionality, well look into other plans with more controls-</div>
                 <button>Get started</button>
-                <div>testo</div>
+                <div>Copyright 2021 Boolean • Classe XX •</div>
 
             </div>
         </section>
     </main>
 
-    <footer>
+    <footer class="bg-third">
         <div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur maiores voluptatem praesentium tempora illo, blanditiis doloremque cupiditate dignissimos accusamus debitis aperiam eaque perferendis similique ipsam quam a quisquam ipsa! Similique!
 
         </div>
         <div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt impedit velit suscipit! Iure obcaecati doloribus recusandae nam, adipisci quae itaque cum minus sed similique aut accusantium deleniti explicabo et voluptatibus!
 
         </div>
 
