--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <nav>
             <div class="container">
-                <div class="row space-between">
+                <div class="row space-between ai-center pd-1-2">
                     <!-- logo -->
                     <div>
                         <img class="img-reboot" src="img/logo.png" alt="">
@@ -24,12 +24,12 @@
                     </div>
                     <!-- button  -->
                     <div>
-                        <ol class="row nav-button">
+                        <ol class="row nav-button ai-center">
                             <li><span><a href="#">Planning</a></span></li>
                             <li><span><a href="#">Testimonial</a></span></li>
                             <li><span><a href="#">Features</a></span></li>
                             <li><span><a href="#">About us</a></span></li>
-                            <li><span><button>Get Started</button></span></li>
+                            <li><span><button class="btn">Get Started</button></span></li>
                         </ol>
                         <div id="Hamburger-button"><i class="fa-solid fa-bars"></i></div>
 
@@ -46,7 +46,7 @@
             <div class="container">
                 <div class="row">
                     <div class="card col-md-2-3 pd-1-2 row-lg ">
-                        <div class="row bg-primary-light">
+                        <div class="row bg-primary-light hg-100">
                             <!-- testo  -->
                             <div class="col-lg-1-2">
                                 <h2>Get a demo application</h2>
@@ -65,7 +65,7 @@
                         </div>
                     </div>
                     <div class="card col-md-1-3 pd-1-2">
-                        <div class="bg-primary-light">
+                        <div class="bg-primary-light hg-100">
                             <div><i class="fa-solid fa-file-code"></i></div>
                             <div>Clean code</div>
                             <div>
@@ -76,7 +76,7 @@
                         </div>
                     </div>
                     <div class="card col-md-1-3 pd-1-2">
-                        <div class="bg-primary-light">
+                        <div class="bg-primary-light hg-100">
                             <div><i class="fa-solid fa-file-code"></i></div>
                             <div>Clean code</div>
                             <div>
@@ -87,7 +87,7 @@
                         </div>
                     </div>
                     <div class="card col-md-1-3 pd-1-2">
-                        <div class="bg-primary-light">
+                        <div class="bg-primary-light hg-100">
                             <div><i class="fa-solid fa-file-code"></i></div>
                             <div>Clean code</div>
                             <div>
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                     <div class="card col-md-1-3 pd-1-2">
-                        <div class="bg-primary-light">
+                        <div class="bg-primary-light hg-100">
                             <div><i class="fa-solid fa-file-code"></i></div>
                             <div>Clean code</div>
                             <div>
