--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                             <li><span><a href="#">Testimonial</a></span></li>
                             <li><span><a href="#">Features</a></span></li>
                             <li><span><a href="#">About us</a></span></li>
-                            <li><span><button class="btn">Get Started</button></span></li>
+                            <li><span><button class="btn btn-small">Get Started</button></span></li>
                         </ol>
-                        <div id="Hamburger-button"><i class="fa-solid fa-bars"></i></div>
+                        <div id="Hamburger-button" class="txt-white"><i class="fa-solid fa-bars"></i></div>
 
 
                     </div>
@@ -46,29 +46,29 @@
             <div class="container">
                 <div class="row">
                     <div class="card col-md-2-3 pd-1-2 row-lg ">
-                        <div class="row bg-primary-light hg-100">
+                        <div class="row bg-primary-light hg-100 pd-1">
                             <!-- testo  -->
                             <div class="col-lg-1-2">
-                                <h2>Get a demo application</h2>
-                                <div>
+                                <h2 class="txt-primary pd-b-1 sub-title-card">Get a demo application</h2>
+                                <div class="pd-b-1">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas eos corporis,
                                         repellat nemo sit fugit, non dolor quis quasi quae assumenda distinctio incidunt
                                         doloremque id soluta quaerat magni ab? Tempora?</p>
                                 </div>
-                                <div><button>App Store</button></div>
+                                <div><button class="btn btn-blu"><i class="pd-r-1-3 fa-brands fa-apple"></i> App Store</button></div>
                             </div>
                             <!-- img card -->
                             <div class="col-lg-1-2">
-                                <img class="img-reboot" src="img/phone.png" alt="">
+                                <img class="img-reboot" id="img-jumbo"src="img/phone.png" alt="">
                             </div>
 
                         </div>
                     </div>
                     <div class="card col-md-1-3 pd-1-2">
-                        <div class="bg-primary-light hg-100">
-                            <div><i class="fa-solid fa-file-code"></i></div>
-                            <div>Clean code</div>
-                            <div>
+                        <div class="bg-primary-light hg-100 pd-1">
+                            <div class="pd-b-1 txt-center ft-size-50 "><i class="txt-primary fa-solid fa-file-code"></i></div>
+                            <div class="txt-primary pd-b-1 txt-center sub-title-card">Clean code</div>
+                            <div class="txt-center">
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, eius illo dicta
                                     totam eos voluptate ab maiores nobis laudantium est harum, doloribus nisi
                                     reprehenderit optio exercitationem corporis assumenda, itaque inventore!</p>
@@ -76,10 +76,10 @@
                         </div>
                     </div>
                     <div class="card col-md-1-3 pd-1-2">
-                        <div class="bg-primary-light hg-100">
-                            <div><i class="fa-solid fa-file-code"></i></div>
-                            <div>Clean code</div>
-                            <div>
+                        <div class="bg-primary-light hg-100 pd-1">
+                            <div class="pd-b-1 txt-center ft-size-50"><i class="txt-primary fa-solid fa-compass-drafting"></i></div>
+                            <div class="txt-primary pd-b-1 txt-center sub-title-card">Web Design</div>
+                            <div class="txt-center">
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, eius illo dicta
                                     totam eos voluptate ab maiores nobis laudantium est harum, doloribus nisi
                                     reprehenderit optio exercitationem corporis assumenda, itaque inventore!</p>
@@ -87,10 +87,10 @@
                         </div>
                     </div>
                     <div class="card col-md-1-3 pd-1-2">
-                        <div class="bg-primary-light hg-100">
-                            <div><i class="fa-solid fa-file-code"></i></div>
-                            <div>Clean code</div>
-                            <div>
+                        <div class="bg-primary-light hg-100 pd-1">
+                            <div class="pd-b-1 txt-center ft-size-50"><i class="txt-primary fa-solid fa-laptop-code"></i></div>
+                            <div class="txt-primary pd-b-1 txt-center sub-title-card">Development</div>
+                            <div class="txt-center">
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, eius illo dicta
                                     totam eos voluptate ab maiores nobis laudantium est harum, doloribus nisi
                                     reprehenderit optio exercitationem corporis assumenda, itaque inventore!</p>
@@ -98,10 +98,10 @@
                         </div>
                     </div>
                     <div class="card col-md-1-3 pd-1-2">
-                        <div class="bg-primary-light hg-100">
-                            <div><i class="fa-solid fa-file-code"></i></div>
-                            <div>Clean code</div>
-                            <div>
+                        <div class="bg-primary-light hg-100 pd-1">
+                            <div class="pd-b-1 txt-center ft-size-50"><i class="txt-primary fa-solid fa-bullhorn"></i></div>
+                            <div class="txt-primary pd-b-1 txt-center sub-title-card">Branding</div>
+                            <div class="txt-center">
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, eius illo dicta
                                     totam eos voluptate ab maiores nobis laudantium est harum, doloribus nisi
                                     reprehenderit optio exercitationem corporis assumenda, itaque inventore!</p>
