--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@
         <section class="bg-secondary">
             <div class="container ">
                 <div class="row">
-                    <div class="card col-lg-1-2">
+                    <div class="card col-lg-1-2 pd-1 card-relative-tp">
                         <!-- img  -->
-                        <div>
+                        <div class="pd-b-5">
                             <img class="img-reboot" src="img/planning1.png" alt="">
                         </div>
                         <div>
-                            <h2>Strategic Planning</h2>
-                            <div>
+                            <h2 class="pd-b-1 sub-title-card txt-white">Strategic Planning</h2>
+                            <div class="txt-white">
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam perspiciatis iste
                                     enim quia a laboriosam eveniet voluptatum quo cupiditate! Nobis blanditiis
                                     exercitationem reiciendis esse quidem nostrum aliquam, quasi corporis nemo.
@@ -134,20 +134,20 @@
                         </div>
                     </div>
 
-                    <div class="card col-lg-1-2 bg-white">
+                    <div class="card col-lg-1-2 bg-white pd-1 radius card-relative">
                         <!-- img  -->
-                        <div>
+                        <div class="pd-b-1">
                             <img class="img-reboot" src="img/planning2.png" alt="">
                         </div>
                         <div>
-                            <h2>App Development</h2>
-                            <div>
+                            <h2 class="pd-b-1 sub-title-card txt-center">App Development</h2>
+                            <div class="pd-b-1 txt-center">
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam perspiciatis iste
                                     enim quia a laboriosam eveniet voluptatum quo cupiditate! Nobis blanditiis
                                     exercitationem reiciendis esse quidem nostrum aliquam, quasi corporis nemo.
                                 </p>
                             </div>
-                            <div><i class="fa-solid fa-down-long"></i></div>
+                            <div class="txt-center"><i class=" fa-solid fa-down-long"></i></div>
                         </div>
                     </div>
 
