--- a/index.html
+++ b/index.html
@@ -55,18 +55,20 @@
                                         repellat nemo sit fugit, non dolor quis quasi quae assumenda distinctio incidunt
                                         doloremque id soluta quaerat magni ab? Tempora?</p>
                                 </div>
-                                <div><button class="btn btn-blu"><i class="pd-r-1-3 fa-brands fa-apple"></i> App Store</button></div>
+                                <div><button class="btn btn-blu"><i class="pd-r-1-3 fa-brands fa-apple"></i> App
+                                        Store</button></div>
                             </div>
                             <!-- img card -->
                             <div class="col-lg-1-2">
-                                <img class="img-reboot" id="img-jumbo"src="img/phone.png" alt="">
+                                <img class="img-reboot" id="img-jumbo" src="img/phone.png" alt="">
                             </div>
 
                         </div>
                     </div>
                     <div class="card col-md-1-3 pd-1-2">
                         <div class="bg-primary-light hg-100 pd-1">
-                            <div class="pd-b-1 txt-center ft-size-50 "><i class="txt-primary fa-solid fa-file-code"></i></div>
+                            <div class="pd-b-1 txt-center ft-size-50 "><i class="txt-primary fa-solid fa-file-code"></i>
+                            </div>
                             <div class="txt-primary pd-b-1 txt-center sub-title-card">Clean code</div>
                             <div class="txt-center">
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, eius illo dicta
@@ -77,7 +79,8 @@
                     </div>
                     <div class="card col-md-1-3 pd-1-2">
                         <div class="bg-primary-light hg-100 pd-1">
-                            <div class="pd-b-1 txt-center ft-size-50"><i class="txt-primary fa-solid fa-compass-drafting"></i></div>
+                            <div class="pd-b-1 txt-center ft-size-50"><i
+                                    class="txt-primary fa-solid fa-compass-drafting"></i></div>
                             <div class="txt-primary pd-b-1 txt-center sub-title-card">Web Design</div>
                             <div class="txt-center">
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, eius illo dicta
@@ -88,7 +91,8 @@
                     </div>
                     <div class="card col-md-1-3 pd-1-2">
                         <div class="bg-primary-light hg-100 pd-1">
-                            <div class="pd-b-1 txt-center ft-size-50"><i class="txt-primary fa-solid fa-laptop-code"></i></div>
+                            <div class="pd-b-1 txt-center ft-size-50"><i
+                                    class="txt-primary fa-solid fa-laptop-code"></i></div>
                             <div class="txt-primary pd-b-1 txt-center sub-title-card">Development</div>
                             <div class="txt-center">
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, eius illo dicta
@@ -99,7 +103,8 @@
                     </div>
                     <div class="card col-md-1-3 pd-1-2">
                         <div class="bg-primary-light hg-100 pd-1">
-                            <div class="pd-b-1 txt-center ft-size-50"><i class="txt-primary fa-solid fa-bullhorn"></i></div>
+                            <div class="pd-b-1 txt-center ft-size-50"><i class="txt-primary fa-solid fa-bullhorn"></i>
+                            </div>
                             <div class="txt-primary pd-b-1 txt-center sub-title-card">Branding</div>
                             <div class="txt-center">
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, eius illo dicta
@@ -134,7 +139,7 @@
                         </div>
                     </div>
 
-                    <div class="card col-lg-1-2 bg-white pd-1 radius card-relative">
+                    <div class="card col-lg-1-2 bg-white pd-1 radius card-relative scale-0-9">
                         <!-- img  -->
                         <div class="pd-b-1">
                             <img class="img-reboot" src="img/planning2.png" alt="">
@@ -161,10 +166,11 @@
         <section>
             <div class="container">
                 <!-- txt -->
-                <div>
-                    <h2>TESTIMONIAL</h2>
-                    <h2>We are committed expert partners</h2>
-                    <div>
+                <div class="pd-b-2">
+                    <div class="txt-center ft-size-1_1 pd-b-2">TESTIMONIAL
+                    </div>
+                    <h2 class="ft-size-2 txt-center txt-secondary pd-b-2">We are committed expert partners</h2>
+                    <div class="txt-center ">
                         <p>We place huge value on strong relationships and have seen the benefit they bring to
                             our business. Customer feedback is vital in helping us to get it right.</p>
                     </div>
@@ -173,51 +179,57 @@
 
                 <!-- card -->
                 <div class="row">
-                    <div class="card bg-secondary row-md">
+                    <div class="card bg-secondary row-md mg-b-1 radius pd-l-r-1-2 p-t-b-1">
                         <!-- img-banner  -->
                         <div class="card col-md-1-3 col-lg-1-4">
-                            <img class="img-reboot" src="img/testimonial1.jpg" alt="">
+                            <img class="img-reboot img-circle" src="img/testimonial1.jpg" alt="">
                         </div>
 
                         <!-- txt-banner  -->
-                        <div class="card col-md-2-3 col-lg-3-4">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, repellendus
-                                quidem! Quam doloremque hic perferendis cumque aliquam. Quod accusamus neque, aut,
-                                suscipit tempora ad sed harum quo, praesentium perferendis ratione!
-                            </p>
-                            <div>NAT REYNOLDS</div>
+                        <div class="card col-md-2-3 col-lg-3-4 row ai-center jc-start pd-l-r-1 txt-white">
+                            <div class="pd-b-1-2">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, repellendus
+                                    quidem! Quam doloremque hic perferendis cumque aliquam. Quod accusamus neque, aut,
+                                    suscipit tempora ad sed harum quo, praesentium perferendis ratione!
+                                </p>
+                            </div>
+                            <div class="ft-bold">NAT REYNOLDS</div>
                         </div>
                     </div>
 
-                    <div class="card bg-secondary row-md">
+                    <div class="card bg-secondary row-md mg-b-1 radius pd-l-r-1-2 p-t-b-1">
                         <!-- img-banner  -->
                         <div class="card col-md-1-3 col-lg-1-4">
-                            <img class="img-reboot" src="img/testimonial1.jpg" alt="">
+                            <img class="img-reboot img-circle" src="img/testimonial2.jpg" alt="">
                         </div>
 
                         <!-- txt-banner  -->
-                        <div class="card col-md-2-3 col-lg-3-4">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, repellendus
-                                quidem! Quam doloremque hic perferendis cumque aliquam. Quod accusamus neque, aut,
-                                suscipit tempora ad sed harum quo, praesentium perferendis ratione!
-                            </p>
-                            <div>NAT REYNOLDS</div>
+                        <div class="card col-md-2-3 col-lg-3-4 row ai-center jc-start pd-l-r-1 txt-white">
+                            <div class="pd-b-1-2">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, repellendus
+                                    quidem! Quam doloremque hic perferendis cumque aliquam. Quod accusamus neque, aut,
+                                    suscipit tempora ad sed harum quo, praesentium perferendis ratione!
+                                </p>
+                            </div>
+                            <div class="ft-bold">NAT REYNOLDS</div>
                         </div>
                     </div>
 
-                    <div class="card bg-secondary row-md">
+                    <div class="card bg-secondary row-md radius pd-l-r-1-2 p-t-b-1">
                         <!-- img-banner  -->
                         <div class="card col-md-1-3 col-lg-1-4">
-                            <img class="img-reboot" src="img/testimonial1.jpg" alt="">
+                            <img class="img-reboot img-circle" src="img/testimonial3.jpg" alt="">
                         </div>
 
                         <!-- txt-banner  -->
-                        <div class="card col-md-2-3 col-lg-3-4">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, repellendus
-                                quidem! Quam doloremque hic perferendis cumque aliquam. Quod accusamus neque, aut,
-                                suscipit tempora ad sed harum quo, praesentium perferendis ratione!
-                            </p>
-                            <div>NAT REYNOLDS</div>
+                        <div class="card col-md-2-3 col-lg-3-4 row ai-center jc-start pd-l-r-1 txt-white">
+                            <div class="pd-b-1-2">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, repellendus
+                                    quidem! Quam doloremque hic perferendis cumque aliquam. Quod accusamus neque, aut,
+                                    suscipit tempora ad sed harum quo, praesentium perferendis ratione!
+                                </p>
+                            </div>
+                            <div class="ft-bold">NAT REYNOLDS</div>
                         </div>
                     </div>
 
@@ -239,8 +251,8 @@
                 <div class="row">
                     <div class="card col-md-1-2 col-lg-1-3 pd-1-2 ">
                         <div class="bg-white">
-                            <h5>01</h5>
-                            <div>High Quality</div>
+                            <h5 class="txt-secondary ft-size-50">01</h5>
+                            <div class="sub-title-card txt-secondary">High Quality</div>
                             <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis hic tempore ratione
                                 dolorum eaque debitis eveniet delectus dolore eos esse dignissimos voluptatum natus
                                 laboriosam porro reprehenderit, a perferendis enim? Libero?</div>
@@ -250,8 +262,8 @@
 
                     <div class="card col-md-1-2 col-lg-1-3 pd-1-2 ">
                         <div class="bg-white">
-                            <h5>01</h5>
-                            <div>High Quality</div>
+                            <h5 class="txt-secondary ft-size-50">01</h5>
+                            <div class="sub-title-card txt-secondary">High Quality</div>
                             <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis hic tempore ratione
                                 dolorum eaque debitis eveniet delectus dolore eos esse dignissimos voluptatum natus
                                 laboriosam porro reprehenderit, a perferendis enim? Libero?</div>
@@ -261,8 +273,8 @@
 
                     <div class="card col-md-1-2 col-lg-1-3 pd-1-2 ">
                         <div class="bg-white">
-                            <h5>01</h5>
-                            <div>High Quality</div>
+                            <h5 class="txt-secondary ft-size-50">01</h5>
+                            <div class="sub-title-card txt-secondary">High Quality</div>
                             <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis hic tempore ratione
                                 dolorum eaque debitis eveniet delectus dolore eos esse dignissimos voluptatum natus
                                 laboriosam porro reprehenderit, a perferendis enim? Libero?</div>
@@ -272,8 +284,8 @@
 
                     <div class="card col-md-1-2 col-lg-1-3 pd-1-2 ">
                         <div class="bg-white">
-                            <h5>01</h5>
-                            <div>High Quality</div>
+                            <h5 class="txt-secondary ft-size-50">01</h5>
+                            <div class="sub-title-card txt-secondary">High Quality</div>
                             <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis hic tempore ratione
                                 dolorum eaque debitis eveniet delectus dolore eos esse dignissimos voluptatum natus
                                 laboriosam porro reprehenderit, a perferendis enim? Libero?</div>
@@ -283,8 +295,8 @@
 
                     <div class="card col-md-1-2 col-lg-1-3 pd-1-2 ">
                         <div class="bg-white">
-                            <h5>01</h5>
-                            <div>High Quality</div>
+                            <h5 class="txt-secondary ft-size-50">01</h5>
+                            <div class="sub-title-card txt-secondary">High Quality</div>
                             <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis hic tempore ratione
                                 dolorum eaque debitis eveniet delectus dolore eos esse dignissimos voluptatum natus
                                 laboriosam porro reprehenderit, a perferendis enim? Libero?</div>
@@ -294,8 +306,8 @@
 
                     <div class="card col-md-1-2 col-lg-1-3 pd-1-2 ">
                         <div class="bg-white">
-                            <h5>01</h5>
-                            <div>High Quality</div>
+                            <h5 class="txt-secondary ft-size-50">01</h5>
+                            <div class="sub-title-card txt-secondary">High Quality</div>
                             <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis hic tempore ratione
                                 dolorum eaque debitis eveniet delectus dolore eos esse dignissimos voluptatum natus
                                 laboriosam porro reprehenderit, a perferendis enim? Libero?</div>
@@ -316,10 +328,12 @@
                 <div class="row">
                     <!-- txt  -->
                     <div class="col-md-2-3 col-lg-3-4">
-                        <div>About Us</div>
+                        <div class="ft-size-50">About Us</div>
                         <div>
                             <p>
-                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam perferendis odit reprehenderit excepturi placeat. Et recusandae odio ipsum odit! Minus quisquam id deleniti hic veritatis mollitia dolore dolores impedit consequatur.
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam perferendis odit
+                                reprehenderit excepturi placeat. Et recusandae odio ipsum odit! Minus quisquam id
+                                deleniti hic veritatis mollitia dolore dolores impedit consequatur.
                             </p>
                         </div>
 
@@ -331,7 +345,7 @@
                             <img class="img-reboot" src="img/about.jpg" alt="">
                         </div>
                         <div>
-                            <div>I help companies
+                            <div class="sub-title-card txt-secondary">I help companies
                                 tincidunt tortor aliquam
                                 nulla facilisi cras
                                 fermentum odio.
@@ -355,7 +369,7 @@
                 <div>
                     Simple, Transparent Pricing
                 </div>
-                <div>
+                <div class="ft-size-50 ft-bold">
                     It's Free
                 </div>
 
@@ -373,11 +387,15 @@
 
     <footer class="bg-third">
         <div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur maiores voluptatem praesentium tempora illo, blanditiis doloremque cupiditate dignissimos accusamus debitis aperiam eaque perferendis similique ipsam quam a quisquam ipsa! Similique!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur maiores voluptatem praesentium tempora
+            illo, blanditiis doloremque cupiditate dignissimos accusamus debitis aperiam eaque perferendis similique
+            ipsam quam a quisquam ipsa! Similique!
 
         </div>
         <div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt impedit velit suscipit! Iure obcaecati doloribus recusandae nam, adipisci quae itaque cum minus sed similique aut accusantium deleniti explicabo et voluptatibus!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt impedit velit suscipit! Iure obcaecati
+            doloribus recusandae nam, adipisci quae itaque cum minus sed similique aut accusantium deleniti explicabo et
+            voluptatibus!
 
         </div>
 
